--- a/examples/template.html
+++ b/examples/template.html
@@ -1,3 +1,4 @@
+<!Doctype html>
 <html>
   <head>
     <style type="text/css">
@@ -15,7 +16,7 @@
   <body>
     <div id="container"></div>
   </body>
-  <script src="http://code.jquery.com/jquery-2.1.0.js"></script>
+  <script src="lib/jquery-2.1.0.js"></script>
   <script src="../lib/bean.js"></script>
   <script src="../lib/underscore.js"></script>
   <script src="../js/Flotr.js"></script>
@@ -48,7 +49,7 @@
   <script src="../js/plugins/legend.js"></script>
   <script src="../js/plugins/spreadsheet.js"></script>
   <script src="../js/plugins/titles.js"></script>
-  <script src="./data.js"></script>
+  <script src="js/data.js"></script>
   <script>
 	$(function () {
       var
