调整非html text label

--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -80,13 +80,14 @@
 			}
           },
 		  yaxis: {
-            showLabels: false,
+            showLabels: true,
 			height: 0.6
 		  },
           y2axis: {
-            showLabels: false,
+            showLabels: true,
 			stack: true
-		  }
+		  },
+          HtmlText: false
 		});
 	  }
 	  drawCandles(container, data);
