调整html text label

--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -87,7 +87,7 @@
             showLabels: true,
 			stack: true
 		  },
-          HtmlText: false
+          HtmlText: true
 		});
 	  }
 	  drawCandles(container, data);
