--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -7,15 +7,18 @@
         padding: 0px;
       }
       #container {
-        width : 800px;
-        height: 384px;
+        width : 90%;
         margin: 8px auto;
         /* border: solid 1px #ff0000; */
       }
     </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   </head>
   <body>
     <div id="container"></div>
+    <div style="width: 90%; margin: 8px auto;">
+      <button id="startBtn">start</button><button id="downloadBtn">download</button>
+    </div>
   </body>
   <script src="lib/jquery-2.1.0.js"></script>
   <script src="../lib/bean.js"></script>
@@ -52,10 +55,7 @@
   <script src="../js/plugins/titles.js"></script>
   <script src="js/data.js"></script>
   <script>
-	$(function () {
-      var container = document.getElementById('container');
-	  var data = getData(-50)
-
+	$(function () {      
 	  var drawCandles = function(container, data){
 		// Draw Graph
 		graph = Flotr.draw(container, [{
@@ -81,16 +81,38 @@
           },
 		  yaxis: {
             showLabels: true,
-			height: 0.6
+			height: 0.8
 		  },
           y2axis: {
             showLabels: true,
-			stack: true
+			stack: true,
+            noTicks: 2
 		  },
           HtmlText: true
 		});
-	  }
-	  drawCandles(container, data);
+        return graph;
+	  };
+      
+      var container = $('#container');
+      container.height($(document).height()*0.7);
+      container = container.get(0);
+      
+	  var data = getData(0,51);
+	  g = drawCandles(container, data);
+      $("#startBtn").click(function(){
+        var i = 0;
+        var id = setInterval(function(){
+          if(i+51<=300){
+            g = drawCandles(container, getData(i, i+51));
+            i++;
+          } else {
+            clearInterval(id);
+          }
+        }, 40);
+      });
+      $("#downloadBtn").click(function(){
+        g.download.saveImage("png");
+      });
     });
   </script>
 </html>
