--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -88,7 +88,10 @@
 			stack: true,
             noTicks: 2
 		  },
-          HtmlText: true
+          HtmlText: true,
+          mouse: {
+            track: true
+          }
 		});
         return graph;
 	  };
