--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -90,6 +90,7 @@
 		  },
           HtmlText: true,
           mouse: {
+            trackFormatter:function(){},
             track: true
           }
 		});
