--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -92,6 +92,10 @@
           mouse: {
             trackFormatter:function(){},
             track: true
+          },
+          crosshair: {
+            mode: "xy",
+            color: "#ff0000"
           }
 		});
         return graph;
