--- a/examples/candles_volumes.html
+++ b/examples/candles_volumes.html
@@ -17,11 +17,10 @@
   <body>
     <div id="container"></div>
     <div style="width: 90%; margin: 8px auto;">
-      <button id="startBtn">start</button><button id="downloadBtn">download</button>
+      <button id="startBtn">start</button><button id="downloadBtn">download</button><button id="rotateBtn">rotate</button>
     </div>
   </body>
   <script src="lib/jquery-2.1.0.js"></script>
-  <script src="lib/jQueryRotate.js"></script>
   <script src="../lib/bean.js"></script>
   <script src="../lib/underscore.js"></script>
   <script src="../js/Flotr.js"></script>
@@ -57,7 +56,8 @@
   <script src="../js/plugins/titles.js"></script>
   <script src="js/data.js"></script>
   <script>
-	$(function () {      
+	$(function () {
+      var rotate = 0;
 	  var drawCandles = function(container, data){
 		// Draw Graph
 		graph = Flotr.draw(container, [{
@@ -100,7 +100,7 @@
             color: "#ff0000",
             hideCursor: false
           },
-          rotate: 1
+          rotate: rotate
 		});
         return graph;
 	  };
@@ -125,7 +125,10 @@
       $("#downloadBtn").click(function(){
         g.download.saveImage("png");
       });
-
+      $("#rotateBtn").click(function(){
+        rotate = rotate ? 0 : 1;
+        g = drawCandles(container, data);
+      });
     });
   </script>
 </html>
