--- a/examples/trend.html
+++ b/examples/trend.html
@@ -92,13 +92,8 @@
 	    xaxis: {
           showLabels: true,
           tickDecimals:0,
-          /* tickFormatter: function(v){
-          var
-          v = parseInt(v),
-          d = dataSource[v];
-          return d[d.length - 1];
-          
-          } */
+          min:0,
+          max:240
         },
 	    yaxis: {
           tickDecimals:2,
