--- a/examples/trend.html
+++ b/examples/trend.html
@@ -98,7 +98,9 @@
 	    yaxis: {
           tickDecimals:2,
           showLabels: true,
-	      height: 0.8
+          showMinorLabels: true,
+	      height: 0.8,
+          specialTicks: [[28.18, '28.18']]
 	    },
         y2axis: {
           showLabels: true,
