--- a/examples/trend2.html
+++ b/examples/trend2.html
@@ -64,7 +64,8 @@
 	    yaxis: {
           tickDecimals:2,
           showLabels: true,
-	      height: 0.8
+	      height: 0.8,
+          specialTicks: [[28.18, '28.18']]
 	    },
         y2axis: {
           showLabels: true,
