--- a/examples/kline.html
+++ b/examples/kline.html
@@ -97,22 +97,25 @@
             var
             v = parseInt(v),
             d = dataSource[v];
+            if(v === 0) return '';
             return d[d.length - 1];
             
           }
         },
 	    yaxis: {
+          tickInside:true,
           tickDecimals:2,
           showLabels: true,
-	      height: 0.8
+	      height: 0.8,
 	    },
         y2axis: {
+          tickInside:true,
           showLabels: true,
 	      stack: true,
           noTicks: 2,
           tickFormatter: function(v){
             return v/10000 + "万";
-          }
+          },
 	    },
         HtmlText: true,
         datacross: {
@@ -120,7 +123,7 @@
           color: "#ffffff",
           hideCursor: false
         },
-        rotate: 1,
+        rotate: 0,
         grid: {
           tickColor: "#232f38",
           color: "#232f38"
