重新生成代码

--- a/examples/kline2.html
+++ b/examples/kline2.html
@@ -70,11 +70,13 @@
           }
         },
 	    yaxis: {
+          tickInside:true,
           tickDecimals:2,
           showLabels: true,
 	      height: 0.8
 	    },
         y2axis: {
+          tickInside:true,
           showLabels: true,
 	      stack: true,
           noTicks: 2,
