去掉第一个x坐标的label

--- a/examples/kline2.html
+++ b/examples/kline2.html
@@ -65,6 +65,7 @@
             var
             v = parseInt(v),
             d = dataSource[v];
+            if (v === 0) return '';
             return d[d.length - 1];
             
           }
