--- a/examples/trend.html
+++ b/examples/trend.html
@@ -12,6 +12,10 @@
         background-color: #101417;
         /* border: solid 1px #ff0000; */
       }
+      .datacrosslabel {
+        color: #FAFAFB;
+        background-color: #232C39;
+      }
     </style>
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8"/>
@@ -51,6 +55,7 @@
   <script src="../js/types/timeline.js"></script>
   <script src="../js/plugins/crosshair.js"></script>
   <script src="../js/plugins/datacross.js"></script>
+  <script src="../js/plugins/datacrosslabel.js"></script>
   <script src="../js/plugins/download.js"></script>
   <script src="../js/plugins/grid.js"></script>
   <script src="../js/plugins/hit.js"></script>
@@ -102,7 +107,8 @@
           showMinorLabels: true,
 	      height: 0.8,
           prevClose: 28.18,
-          specialTicks: [[28.18, '28.18']]
+          specialTicks: [[28.18, '28.18']],
+          tickInside: false
 	    },
         y2axis: {
           showLabels: true,
@@ -110,13 +116,16 @@
           noTicks: 2,
 	    },
         HtmlText: true,
+        datacrosslabel: {
+          show: true
+        },
         datacross: {
           mode: "vh",
           color: "#ffffff",
           hideCursor: false,
           drawPoint: true
         },
-        rotate: 1,
+        rotate: 0,
         grid: {
           tickColor: "#232f38",
           color: "#232f38"
