--- a/examples/kline.html
+++ b/examples/kline.html
@@ -87,7 +87,8 @@
         data:dataSource,
         stock_volumes: {
           show: true,
-          barWidth: 0.6
+          barWidth: 0.6,
+          forceFill: true
         },
         yaxis: 2
       }];
