--- a/examples/kline.html
+++ b/examples/kline.html
@@ -88,7 +88,8 @@
         stock_volumes: {
           show: true,
           barWidth: 0.6,
-          forceFill: true
+          forceFill: true,
+          yi: 5
         },
         yaxis: 2
       }];
