增加选项直接设定是否在trend图中

--- a/examples/kline.html
+++ b/examples/kline.html
@@ -88,9 +88,9 @@
         stock_volumes: {
           show: true,
           barWidth: 0.6,
-          forceFill: true,
-          yi: 5
+          forceFill: true
         },
+        yi: 5,
         yaxis: 2
       }];
       var options = {
