--- a/examples/trend.html
+++ b/examples/trend.html
@@ -91,7 +91,7 @@
           show: true,
           barWidth: 0.6,
           forceFill: true,
-
+          inTrend: true,
           prevClose: 28.18
         },
         yi: 2,
